--- a/css/svg.css
+++ b/css/svg.css
@@ -6,7 +6,7 @@ text {
     visibility: visible;
 }
 rect{
-    background-color: #ACE600;
+    background-color: blue;
     width: 60px;
     height: 40px;
 }
