--- a/svg.css
+++ b/svg.css
@@ -2,7 +2,7 @@
     stroke: yellow;
     x: 0;
     y: 15;
-    fill: rgb(205, 221, 51);
+    fill: white;
     stroke: rgb(230, 153, 0);
 }
 .text-container{
