--- a/svg.css
+++ b/svg.css
@@ -23,10 +23,10 @@
     x: 5;
     y: 2;
 }
-.node:hover .child-container{
+/*.node:hover .child-container{
     stroke-width: 2;
     fill: rgb(53, 155, 251);
 }
 .node:hover .text-container{
     stroke-width: 2;
-}
+}*/
